bugfix: change target release names

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,13 +49,13 @@ jobs:
 
           if [[ "${RUNNER_OS}" == "macOS" ]]; then
             echo "Runner is mac Os"
-            binary_path="sugar-macos-intel-latest${binary_extension}"
+            binary_path="ci-test-macos-intel-latest${binary_extension}"
           else
             echo "Runner is $matrix.os"
-            binary_path="sugar-${{ matrix.os }}${binary_extension}"
+            binary_path="ci-test-${{ matrix.os }}${binary_extension}"
           fi
           echo "Current Binary path is $binary_path"
-          mv "target/release/sugar${binary_extension}" "${binary_path}"
+          mv "target/release/ci-test${binary_extension}" "${binary_path}"
           echo "Setting output"
           echo "::set-output name=binary_path::${binary_path}"
           echo "Stripping Binary Path"
@@ -70,5 +70,6 @@ jobs:
 
       - name: Release Tags
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ${{ steps.build.outputs.binary_path }}
